# viv-auth

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_email.py  test_middleware.py  test_models.py  test_routes.py
viv_auth/: __init__.py  config.py  email.py  middleware.py  models.py  routes.py  session.py
viv_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
viv_auth/templates/auth/: check_email.html  error.html  login.html
