[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viv-auth"
version = "0.1.0"
description = "Magic link authentication for FastAPI apps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "sqlalchemy>=2.0.25",
    "itsdangerous>=2.1.0",
    "resend>=2.0.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["viv_auth*"]

[tool.setuptools.package-data]
viv_auth = ["templates/**/*.html"]
